# Nifsi

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: nifsi_cli.rs
core/: Cargo.toml
core/src/: core_lib.rs  protocol.rs
daemon/: Cargo.toml
daemon/src/: nifsid_main.rs
fs/: Cargo.toml
fs/src/: fs_lib.rs
mesh/: Cargo.toml
mesh/src/: mesh_lib.rs
