[package]
name='mesh'
version='0.1.0'
edition='2021'

[dependencies]
nifsi-core={path='../core'}
tokio={version='1.0', features=['full']}
tokio-util={version='0.7', features=['codec']}
serde={version='1.0', features=['derive']}
boringtun='0.6'
bytes='1.5'
bincode='1.3'
thiserror='1.0'

[lib]
path='src/mesh_lib.rs'
